@@ -16,30 +16,28 @@ AUX rpm-4.8.1-autotools.patch 929 RMD160 9b4b1b08e38f79522a5b1e6ab487ed89b8234ad
 AUX rpm-4.8.1-db-path.patch 628 RMD160 cee347c45bbbebd724dd1346bd74b3344b6a7d06 SHA1 08c3aa65104db74c9851911970711b2f503dfcc8 SHA256 791682c72dd3a24e5e8268bfa967412035aa135c7b8d4673541bed129b89a0f3
 DIST rpm-4.4.6.tar.gz 17157249 RMD160 6b433d20a63fb2542244ae62eff0a8b5fe290439 SHA1 33221f95189671d1a083b4f140bcf9a88ecd4374 SHA256 1e1da50af2b9dfe34c79315eae7520e7e57087671e17ce26107d779ae2b0b595
 DIST rpm-4.4.7.tar.gz 14125623 RMD160 9002eb0fe1d680d8bff447d6918f9726c9a4e34c SHA1 b119fb0f10fd5e2eb330ba547b6a89e40f3c0e68 SHA256 18fde4195e4ac21a4290327336948f8c4fc58a680395edbb5f2f31bae67b18b5
-DIST rpm-4.8.1.tar.bz2 3714502 RMD160 9326931bb34f4919ee0366f6aa288e41b37cba30 SHA1 5811168721f6caa3fb883ebd491c8c5416d9bf57 SHA256 43ca026dd2b80e339066d12422f67d213dde9f1869a56b0b95aa0091a834c8fa
 DIST rpm-4.9.1.2.tar.bz2 3500371 RMD160 3b3a8904f9f0d8ae03c1ab903ca7f420cb9178ee SHA1 5ec557424d90461f76d4ad30bfb6653b79920d58 SHA256 ea55e5c5b70703a3fea33e5debec27a694816ae86d1bf5ce99bc9e27db84b60a
 DIST rpm-5.1.6.tar.gz 8305612 RMD160 88645f4a7c2e25fffaa5628d267e86eaac137b35 SHA1 3ab7d1edf333102c748c22e9144ab90d9719ab0b SHA256 82ee1a737bd77ddd90b0fe1e9a2f478c46033e451fac3881d00ab9e166951799
 EBUILD rpm-4.4.6-r7.ebuild 3191 RMD160 5ca2a16ac107c914edbccccdf0d0b2ebeb96c4e2 SHA1 0b69289cf1bc48a453c0c7117e01dd1e4021005c SHA256 1c168326b03609d81932272281226a607db66a62f7ef3114a4baf07cca3f4676
 EBUILD rpm-4.4.7-r6.ebuild 3250 RMD160 2c00c3042d9dda857903372084e386671811ad79 SHA1 7ffba60598cb1b4a88434316791e91ad17226e45 SHA256 8c58fe71a4a054848bd7304fe894d7c1b435a59a588b674dc4414b4d971deb4a
-EBUILD rpm-4.8.1-r2.ebuild 2467 RMD160 56c3aeed97ccfaf849afe5b2d76020b6176befc1 SHA1 bf088eef5b2d276e0afbc117d1b7979d195535c0 SHA256 c95eb9a186350496bb8ae8880adc37f7bb9afc04af804f61f0de04946c2ad650
 EBUILD rpm-4.9.1.2.ebuild 2443 RMD160 05de7349f94426203d6000cb12d4618276b3f95d SHA1 af300370962e4ef983bf6bef97a685e539853362 SHA256 61e6f7a9a27a8751e2981191c9e2ab6b9331bdab3c3af2b86cfc60f70f970876
 EBUILD rpm-5.1.6.ebuild 2961 RMD160 af3d9eb849538de04e7ce81d58db72fc677cfa15 SHA1 ef6f5cbd788e174d6db219aef15fd45d9b139557 SHA256 af7970970ffcfb2d986e1aa53b4aba38bb5795d1d1c0ab7246d8e2c9e0a2f0f3
-MISC ChangeLog 20047 RMD160 47155af3b46b3df10bd1aae3f6899e48ba37acd0 SHA1 1428f9a2d4494573910bd3992d9d5779882ca454 SHA256 74ace776e38aa94f353b3c6dc39f7ac7820bf64cee343884462be86331ba516e
+MISC ChangeLog 20186 RMD160 9af02b58ddfa05adde2674b67cee32c6dbed4823 SHA1 adf80c0531f00078e300165d41518f9f7559deaf SHA256 ed8802b4651ba6a2020bf421d8343891ace6ee7873f60bc89f46e6d20a6a17a4
 MISC metadata.xml 412 RMD160 f80c92312d155e06f578bfafc5c6887a87a50029 SHA1 90899c21608493640f9e30dca30613b7823c9854 SHA256 49b33ada612c71654ff1706d78dbeb1d4150455e661c46b343cd5523386d3cd0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBCgAGBQJPQrEYAAoJELy9dS57CHJBXAcP/0iaph0sq68vB0BlihpEI4FC
-d/YOqucKZuSSIs/CO60Af7BybuvmPybHyZQF9zf/RBRxid5FkqwXSaiZNbDS412D
-0xB40sfbJ6K3T+Xzsw0q2bmFSgBOfm826JJWC46LX1YRRFebod4RGCNqgPI7Hs8Q
-vUJYjDZm9Tkct56pPnTAXd1B0f8r23sC8q68/NLDGCVx60LGTA+O2ncWwfWmJZ8W
-hSwH287r8TJmpj4VZQqBWzU271OqqagWMXq2FwS1CwbLE1rkVJDPdE1Tr1gWVeyJ
-9spYpxXfdiCriCkUmO/3DO7ujhWSWgq1/pvWDo+2xJr+asxCF7uKhuoDU+rAi97a
-in2i4j40x8ZxgoX15nqOVchP/9fcOS3mPVI4LoYcwWn8XAVibHCh0ULJMLEUaUc6
-qguALQNQyEi7QWPpMtbKbt9ChagQKKrmM/3eR3r3y9u3mCSUFFUEo6blaGVFvPPP
-e4V/xjdntSdGFWi/rjS9UGB7wC5s2FhLcmicHPifFHPOxvbU8Cq4yiQLzraavR7O
-fhUupFDNKMT8lL39Fk0x7b0e0A05e+ABidh8AbJIajm9OLvN+qIRxMHfS1AvPPWN
-n9o6j/dD3OHXS8MZvwJbSIM4ChD3z0f2zdYfVI5Rlv3SxuGdnbvZto8tVFF4/uIa
-t26cEhk3AobxZ4rPF+R7
-=7ozf
+iQIcBAEBCgAGBQJPSKa1AAoJELy9dS57CHJBfyYP/2fybV5mibGjBsvsj7zO66mp
+2YsW8HUUu5YWEs/hfhH5s3M1IC2e+5Vslxv+P8m9P+dbq8YBE8DcQLqlY7Cfo8nO
+qWJxzIZAxbcpGv+4QtdC3ylJ60gsncoaSNrj31yj5rRHgoNi3eStA46bGRoqaRSC
+L7qYp23uPGP9k9w0Rs6yNBA/LjutVNDTEU9uJLsoFxIoNyMphgSMGjjWKObw+QGR
+6uREFYhIk/eVvwo2NYFMxFe7dsfURwWSwcAgGeV6BCpAGybx7A2gilsKtOUoY+Dp
+xcvj+Q7Xaabc0wCn+cFCfx/68MQSeXAcK1WNkoHZEXsdWmCU+kaq8zxk0OR6JqMc
+Zt96tu5ce8Le2EsdTcnt/eJeSUZhBXpO3ZXPnjnvp8jL1Ll2Tbbr7uFROhVV16Fy
+VmfxFra9GpY5TIcq3LPyU/zUKExu9PKEtWu+4UpjygKzJR5/301ehBkuUY0IIb7k
+Z+TaVFmCJxPS+/xwJhHlbVyDSSjrVp0sGmsWfMo0PjoWHw4NdUNU9ARmfzE+1N5L
+YOTrtkl0lT+75bscjnklwmNuuHGhP3CEyNrdk5fP5XxCgRul4glQPQ8ZzOB6faGV
+ozk229vsvnVK3E3Jlc+xsVXxGCmPxeg+rDKX3YqERAGrSxHAyFTajaqmZuqpHOoX
+v07SSBJf4Bvo53AukGFr
+=c2rM
 -----END PGP SIGNATURE-----
