@@ -1,6 +1,10 @@
 # ChangeLog for app-arch/rpm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm/ChangeLog,v 1.127 2012/02/20 20:46:09 sochotnicky Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm/ChangeLog,v 1.128 2012/02/25 09:15:10 sochotnicky Exp $
+
+  25 Feb 2012; Stanislav Ochotnicky <sochotnicky@gentoo.org>
+  -rpm-4.8.1-r2.ebuild:
+  Removed older unstable version. Use 4.9.1.2 please
 
   20 Feb 2012; Stanislav Ochotnicky <sochotnicky@gentoo.org>
   rpm-4.9.1.2.ebuild:
